Updated .gitignore to work better for Xcode 4.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-*.pbxuser
-*.mode1*
-*.perspective*
-build
+# Ignore Finder spam
+\.DS_store
+
+# Ignore cruft in the project bundle
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+
+# Ignore build products folder
+build/
